spade-tests/src/snapshots/spade_tests__typeinference__type_level_ifs_must_be_bool.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    gen if 0 {}
    else {}
}


error: gen if conditions must be #bool, got _
  ┌─ testinput:2:12
  │
2 │     gen if 0 {}
  │            ^ Expected #bool
  │
  = note: Expected: #bool
               Got: #number
